added modern ui design for newtab page

--- a/main.html
+++ b/main.html
@@ -1,8 +1,50 @@
+<!DOCTYPE html>
 <html>
-<head>
-  <title>ModernDial</title>
-</head>
-<body>
-  <h1>Hello world!</h1>
-</body>
+
+  <head>
+    <meta charset="utf-8">
+    <title>ModernDial</title>
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/misc.css" rel="stylesheet">
+    <link href="css/tiles.css" rel="stylesheet">
+    <script src="js/jquery.min.js" type="text/javascript"></script>
+  </head>
+    
+  <body>
+    <div id="catchScroll"></div>
+    <div id="wrapper">
+      <div id="header">
+        <a id="siteTitle" href="#">ModernDial</a>
+      </div>
+      <div id="content" style="display: block; width: auto; margin-left: 0px; margin-top: 70px; opacity: 1; ">
+        <a href="#" class="tile group0 greenTile" style="margin-top: 0px; margin-left: 0px; width: 280px; height: 135px; display: inline; "> 
+          <div id="title">What is it?</div>   
+          <div id="desc">This is a framework or template to create websites based on the Windows&nbsp;8 Metro UI style.</div>
+        </a>
+        <a href="#" class="tile group0 blueTile" style="margin-top: 145px; width: 280px; height: 135px; display: inline; ">
+          <div id="title">Features</div>  
+          <div id="desc">Easy content managing, automatic tile positioning, many types of tiles (slideshow, livetiles...), SEO optimized...</div> 
+        </a>
+        <a href="#" class="tile group1 redTile" style="margin-top: 290px; width: 280px; height: 135px; display: inline; ">  
+          <img style="float:left; margin-top:10px;margin-left:5px;" src="img/icons/download_s.png" height="50" width="50/">   
+          <div id="title" style="margin-left:60px;">It's free</div>   
+          <div id="desc" style="margin-left:61px;">v2.1.2&nbsp;&nbsp;(15/08/2012)</div>
+        </a>
+              <a href="#!changelog" class="tile group1 orangeTile" style="margin-top: 145px; margin-left: 700px; width: 135px; height: 135px; display: inline; "> 
+      <div id="title">
+        <span style="font-size:23px;">Changelog<br>Upgrades<br> Bugs</span>
+      </div>   
+      <div id="desc"></div>   </a>
+              <a href="#!terms_of_use" class="tile group1 darkBlueTile" style="margin-top: 290px; margin-left: 700px; width: 135px; height: 135px; display: inline; ">    <div id="title"><span style="font-size:20px;">Copyright <br> &amp; <br> Terms of use</span></div>   <div id="desc"></div>   </a>
+              <a href="#!donate" class="tile group1 lightBlueTile" style="margin-top: 145px; margin-left: 845px; width: 135px; height: 135px; display: inline; "> <div id="title">Donate</div>    <div id="desc"></div>   </a>
+              <a href="#!tutorial" class="tile group2 orangeTile" style="margin-top: 0px; margin-left: 1400px; width: 280px; height: 135px; display: inline; ">       <div id="title" style="margin-left:5px;">Tutorials</div>    <div class="livetile" style="margin-left: 10px; opacity: 1; margin-top: 0px; " id="livetile200">Extra features</div>    </a>
+              <a href="forum/" class="tile group2 darkBlueTile" style="margin-top: 145px; margin-left: 1545px; width: 135px; height: 135px; display: inline; ">   <img src="img/icons/textbubble.png" height="59" width="72" style="margin-left:28px;margin-top:16px;"><div id="title" style="margin-left:20px">Forum</div>   </a>
+              <a href="#!Contact" class="tile group2 lightBlueTile tileImageSlider"
+              id="0.5 " style="margin-top: 0px; margin-left: 1690px; width: 135px; height: 135px; display: inline; ">   <div class="tileSliderWrapper" style="position: absolute; margin-top: 0px; ">   <div style="width: 135px; height:135px;">   <img src="img/icons/contact.png" height="94.5" width="94.5" style="margin-left: 20.25px; margin-top: 20.25px">  </div>  <div id="tileSliderText"><span style="font-size:30px; padding-left:5px;">Contact</span></div>   </div>  </a>
+              <a href="#!Fixes" class="tile group2 redTile" style="margin-top: 145px; margin-left: 1400px; width: 135px; height: 135px; display: inline; ">   <div id="title" style="font-size:50px; margin-top:-8px;">Fixes</div>    </a>
+          </div>
+      </div>
+  </body>
+
 </html>
