form of adding bookmark was restyled

--- a/form.html
+++ b/form.html
@@ -1,12 +1,12 @@
-<h3 style="margin-top:0;">Add dial</h3>
+<h1 style="margin-top:0;">Add dial</h1>
 <div class="formWrapper" style="margin-top:20px;">
   <input type="text" id="site_url" name="Site url" value="" placeholder="Enter site url">
   <textarea id="site_description" name="Site description" placeholder="Enter site description"></textarea>
   <select>
-    <option value="0" class="orange-item">Orange</option>
-    <option value="1" class="blue-item">Blue</option>
-    <option value="2" class="green-item">Green</option>
-    <option value="3" class="red-item">Red</option>
+    <option value="0" class="orangeItem">Orange</option>
+    <option value="1" class="blueItem">Blue</option>
+    <option value="2" class="greenItem">Green</option>
+    <option value="3" class="redItem">Red</option>
   </select>
 </div>
 <div id="nav" style="display: block; ">
