added jquery-ui plugin for implementing draggable option

--- a/main.html
+++ b/main.html
@@ -8,12 +8,13 @@
     <link href="css/main.css" rel="stylesheet">
     <link href="css/misc.css" rel="stylesheet">
     <link href="css/tiles.css" rel="stylesheet">
-    <script src="js/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="js/plugins.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/tiles.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
-    <script src="main.js" type="text/javascript"></script>
+    <script type="text/javascript" src="main.js"></script>
   </head>
     
   <body>
@@ -23,6 +24,7 @@
         <a id="siteTitle" href="#">ModernDial</a>
       </div> -->
       <div id="content"></div>
+      <button id="customize">Customize</button>
     </div>
   </body>
 
