--- a/main.html
+++ b/main.html
@@ -24,7 +24,10 @@
         <a id="siteTitle" href="#">ModernDial</a>
       </div> -->
       <div id="content"></div>
-      <button id="customize">Customize</button>
+      <div id="methods">
+        <button id="addTile">Add tile</button>
+        <button id="customize">Customize</button>
+      </div>
     </div>
   </body>
 
