customize button was removed

--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
       <div id="content"></div>
       <div id="methods">
         <button id="addTile">Add tile</button>
-        <button id="customize">Customize</button>
+        <!-- <button id="customize">Customize</button> -->
       </div>
     </div>
   </body>
