some code refactoring

--- a/main.html
+++ b/main.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="js/plugins.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/tiles.js"></script>
+    <script type="text/javascript" src="js/bookmarks.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
     <script type="text/javascript" src="main.js"></script>
   </head>
