added saving of tile position

--- a/form.html
+++ b/form.html
@@ -1,5 +1,7 @@
 <h1 style="margin-top:0;">Add dial</h1>
 <div class="formWrapper">
+  <input type="hidden" id="position_top">
+  <input type="hidden" id="position_left">
   <div class="column">
     <label>Site url:</label>
     <input type="text" id="site_url" name="Site url" value="" placeholder="Site url"/>
