added two more tile colors

--- a/form.html
+++ b/form.html
@@ -14,9 +14,11 @@
     <label>Color:</label>
     <select id="tile_color">
       <option value="0" class="orangeItem">Orange</option>
-      <option value="1" class="blueItem">Blue</option>
-      <option value="2" class="greenItem">Green</option>
       <option value="3" class="redItem">Red</option>
+      <option value="2" class="greenItem">Green</option>
+      <option value="4" class="darkBlueItem">Dark blue</option>
+      <option value="1" class="blueItem">Blue</option>
+      <option value="5" class="lightBlueItem">Light blue</option>
     </select>
     <label>Width:</label>
     <select id="tile_width">
