added yellow tile color, prettified edit tile button

--- a/form.html
+++ b/form.html
@@ -13,6 +13,7 @@
   <div class="column">
     <label>Color:</label>
     <select id="tile_color">
+      <option value="6" class="yellowItem">Yellow</option>
       <option value="0" class="orangeItem">Orange</option>
       <option value="3" class="redItem">Red</option>
       <option value="2" class="greenItem">Green</option>
