implemented apply of the color from options page, added color.js that allows to determine if the buttons color and background one are contrast enough

--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
     <link href="css/main.css" rel="stylesheet">
     <link href="css/misc.css" rel="stylesheet">
     <link href="css/tiles.css" rel="stylesheet">
+    <script type="text/javascript" src="js/color.js"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="js/plugins.js"></script>
