close options tab after save, contrast improvement

--- a/options.html
+++ b/options.html
@@ -11,6 +11,6 @@
 </head>
 <body>
   <input id="picker" value="#096440">
-  <button class="navItem" style="background-color: #789600;" id="save-options">Save</button>
+  <button class="navItem" style="background-color: #789600;" id="save">Save</button>
 </body>
 </html>
