some code refactoring, some trash was removed

--- a/form.html
+++ b/form.html
@@ -1,17 +1,17 @@
-<h1 style="margin-top:0;">Add dial</h1>
+<h1 style="margin-top:0;" class="fixColor">Add dial</h1>
 <div class="formWrapper">
   <input type="hidden" id="position_top">
   <input type="hidden" id="position_left">
   <div class="column">
-    <label>Site url:</label>
+    <label class="fixColor">Site url:</label>
     <input type="text" id="site_url" name="Site url" value="" placeholder="Site url"/>
-    <label>Site title:</label>
+    <label class="fixColor">Site title:</label>
     <input type="text" id="site_title" name="Site title" placeholder="Site title"/>
-    <label>Site description:</label>
+    <label class="fixColor">Site description:</label>
     <textarea id="site_description" name="Site description" placeholder="Site description"></textarea>
   </div>
   <div class="column">
-    <label>Color:</label>
+    <label class="fixColor">Color:</label>
     <select id="tile_color">
       <option value="6" class="yellowItem">Yellow</option>
       <option value="0" class="orangeItem">Orange</option>
@@ -21,13 +21,13 @@
       <option value="1" class="blueItem">Blue</option>
       <option value="5" class="lightBlueItem">Light blue</option>
     </select>
-    <label>Width:</label>
+    <label class="fixColor">Width:</label>
     <select id="tile_width">
       <option value="1">1</option>
       <option value="2">2</option>
       <option value="3">3</option>
     </select>
-    <label>Height:</label>
+    <label class="fixColor">Height:</label>
     <select id="tile_height">
       <option value="1">1</option>
       <option value="2">2</option>
